# pyrgbd

./: .gitignore  .gitmodules  README.md  bootstrap.py  bootstrap_librgbd.py  build.py  main.py  pyproject.toml  setup.py  test_encoder.py
.github/workflows/: build.yml
pyrgbd/: __init__.py  audio.py  av_packet_handle.py  build_librgbd.py  calibration.py  capi_containers.py  capi_utils.py  color.py  depth.py  ffmpeg.py  file.py  file_parser.py  file_writer.py  frame.py  main.py  math.py  nativefile.py  tdc1.py  utils.py
