[tool.poetry]
name = "pyrgbd"
version = "0.1.0"
description = ""
authors = ["Hanseul Jun <hanseul@telegie.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
cffi = "^1.15.1"
numpy = "^1.23.2"
opencv-python = "^4.6.0"
requests = "^2.28.1"
vedo = "^2022.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "setuptools.build_meta"
